# HandyKey4VR_Server

./: .dockerignore  .gitignore  1_organize_logs.py  2_analyze_gesture.py  2_analyze_typing.py  3_visualize_gesture.py  3_visualize_typing.py  README.md  USAGE.md  _3_visualize_gesture.py  _3_visualize_typing.py  _4_stat_analysis.py  _5_analyze_questionnaires.py  analysis.py  analysis_visualize.py  analyze_gesture.py  app.py  app2.py  app3.py  app4.py  check_word_predictor.py  combined_analysis_data.csv  config.json  dockerfile  export_tree.sh  gesture_test.py  get_model.sh  main.py  nasa_tlx.py  organize_logs.py  phrases2.txt  pyproject.toml  requirements.txt  test3.py  tree.json  tree.txt  treecommand.txt  typing_test.py  typing_test_v1.py  visualize_gesture_analysis.py  (+8 more)
botsu/: main.py  main2.py  main3.py  main_old.py  test.py  test2.py  test3.py  typing_test_v1.py
configs/: experiment_config.json  participants_config.json
gestures/: gesture.json  gestures.json
logs/: gesture_log_p01.csv  log_p01.csv  log_p01_2025-12-16-01-53-05_raw.csv  log_p01_2025-12-16-01-53-05_summary.csv  log_p01_2025-12-16-01-58-51_raw.csv  log_p01_2025-12-16-01-58-51_summary.csv  log_p01_2025-12-16-02-01-30_raw.csv  log_p01_2025-12-16-02-01-30_summary.csv  log_p01_2025-12-16-04-22-11_raw.csv  log_p01_2025-12-16-04-22-11_summary.csv  log_p01_2025-12-18-07-29-00_raw.csv  log_p01_2025-12-18-07-29-00_summary.csv  log_p01_2025-12-18-16-09-06_raw.csv  log_p01_2025-12-18-16-09-06_summary.csv  log_p01_2025-12-23-09-01-17_raw.csv
logs_gesture/: log_p01_2025-12-28-12-01-10_gesture.csv  (+5 more)
(+432 files in other folders)
