[project]
name = "handykey4vr-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-socketio>=5.6.0",
    "kenlm",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "python-osc>=1.9.3",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
kenlm = { url = "https://github.com/kpu/kenlm/archive/master.zip" }
